improved setting a task as IS_UPDATING, instead of a global IS_UPDATING variable, worked with the IS_UPDATING property inside every tasks's object. Prevented user from updating two tasks at the same time which could've caused some weird behaviors

--- a/index.css
+++ b/index.css
@@ -238,9 +238,7 @@ main .listContainer li div button:hover {
     background-color: rgb(221, 221, 221);
 }
 
-.updateActive {
-    background-color: rgb(0, 98, 255);
-    color: #4181F7;
+main .listContainer .updateActive {
     border: 1px solid #4181F7;
 }
 
